# review-analysis-workflow

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  runner.py  runner_phase1.py  runner_phase2.py  runner_phase3.py
data/interim/: reviews_in.swiggy.android_T=2026-01-07.json
data/processed/: reviews_in.swiggy.android_2025-12-29.json  reviews_in.swiggy.android_2025-12-30.json  reviews_in.swiggy.android_2025-12-31.json  reviews_in.swiggy.android_2026-01-01.json  reviews_in.swiggy.android_2026-01-02.json  reviews_in.swiggy.android_2026-01-03.json  reviews_in.swiggy.android_2026-01-04.json  reviews_in.swiggy.android_2026-01-05.json  reviews_in.swiggy.android_2026-01-06.json  reviews_in.swiggy.android_2026-01-07.json
llm/: claude_client.py  gemini_client.py  groq_client.py  mistral_client.py  utils.py
notebooks/: 1.ScrapeReviews_SerpAPI.ipynb  results.json
output/: in.swiggy.android_Topic_Trend_Table.csv
output/in.swiggy.android/: topic_assignments_2025-12-29.json  topic_assignments_2025-12-30.json  topic_assignments_2025-12-31.json  topic_assignments_2026-01-01.json  topic_assignments_2026-01-02.json  topic_assignments_2026-01-03.json  topic_assignments_2026-01-04.json  topic_assignments_2026-01-05.json  topic_assignments_2026-01-06.json  topic_assignments_2026-01-07.json  topic_counts_2025-12-29.json  topic_counts_2025-12-30.json  topics.json  (+8 more)
review-analysis/: dataset.py  plots.py
review_analysis/: __init__.py  config.py  dataset.py  features.py  workflow.py  workflow_phase1.py  workflow_phase2.py  workflow_phase3.py
(+2 files in other folders)
