[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "review-analysis"
version = "0.0.1"
description = "AI agent to consume daily Google Play Store reviews (starting from T (given date) to T-30) for an app like Swiggy or Zomato and generate a trend analysis report."
authors = [
  { name = "Kinjal Mitra" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.11.0"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.isort]
profile = "black"
known_first_party = ["review-analysis"]
force_sort_within_sections = true


